--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,6 @@ h1{
 }
 h2{
   font-style: italic;
-  text-align: center;
   color: red;
 }
 p{
@@ -11,4 +10,6 @@ p{
 }
 body{
   background-color: salmon;
+  font-family: sans-serif;
+  text-align: center;
 }
